# poseidon2-interop-kit

./: README.md
noir/: nargo.toml
noir/src/: lib.nr  tests.nr
rust/: Cargo.toml
rust/src/: lib.rs
rust/tests/: barretenberg_test.rs  conformance.rs  gen_vectors.rs
spec/: domains.md  encoding.md  vectors.md
vectors/: address_salt.json  merkle_node.json  note_commitment.json  nullifier.json  poseidon2_raw.json  smt_leaf.json
