[package]
name = "mimir-poseidon2-interop"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Poseidon2 interoperability kit for BN254 - domain seperated hasing across Rust, Noir and Solidity for mimir colelctive privacy solutions."

[dependencies]
taceo-poseidon2 = "0.2"
ark-bn254 = "0.5"
ark-ff = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
hex = "0.4"